significant improvements to the framework and modules